Fix: Make Jumuah times 70% when all 3 set to prevent scrollbar

--- a/Assets/css/eict.css
+++ b/Assets/css/eict.css
@@ -866,7 +866,7 @@
 
 /* If 3 Jumuah times, reduce all times further */
 .x-board-modern .jummah-prayer .prayer-jamaat p .dsJumuah {
-    font-size: 0.8em;
+    font-size: 0.7em;
 }
 
 .x-board-modern .fajr-prayer , .x-board-modern .sunrise{
